changed some class names

--- a/code/index.html
+++ b/code/index.html
@@ -10,8 +10,8 @@
   <body>
        <!-- Some kind of logo and navbar -->
     <header class="header-container">
-      <h1 class="Top-title">Happy News</h1>
-      <img class="logo" src="News-icon.png" alt="Logga">
+      <h1 class="top-title">Happy News</h1>
+      <img class="logo" src="News-icon.png" alt="Logo">
       <nav class="nav-container">
         <a class="nav-link" href="About">About</a>
         <a class="nav-link" href="Search">Search</a>
@@ -23,7 +23,7 @@
     <section class="big-news-container">
       <article>
        <h2 class="big-news-title">Politics</h2>
-        <div class="big-news-child">
+        <div class="big-news-items">
         <div class="img-big-news">
           <img src="./USA.jpg" alt="Bild på en stor nyhet" width="500px">
         </div>
