fix height on footer

--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
     <title>Neo News site</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-<!-- should be 1. logo 2. site name 3. navbar -->
+  
   <body>
     <header class="coreNavigation container">    
       <nav class="desktop-menu-top">
@@ -14,7 +14,7 @@
         <div class="nav-item">Today</div>
         <div class="nav-item">This week</div>
         <div class="nav-item">Month</div>
-        </nav>  
+      </nav>  
         <div class="title-Neo"> 
         <h1>NeoNews</h1>      
         </div>
@@ -26,9 +26,7 @@
 
     <section class="big-news container">
       <img class="photo-bar" src="../img/new2_marjanblan-sAaHII-L-a8-unsplash.png" alt="Image of Corona virus as a paperball">
-  
-      <div class="news-card">
-        
+      <div class="news-card">       
         <p class="text"> 
         <h3>Coronavirus vaccine: What are human challenge trials?</h3>
         Volunteers are set to be deliberately infected with Covid-19 after the UK Government said it will set up human challenge trials to speed up the development of a vaccine.<br><br>
@@ -41,29 +39,28 @@
 
     <section class="more-news container">
       <div class="news-card">
-      <img class="photo-bar" src="../img/rom-matibag-CnR-cx0BNyg-unsplash.png" alt="Image of a person holding a sign saying Biden Harris"/>
-      <p class="text">  
-      <h3>She Did It</h3>
+        <img class="photo-bar" src="../img/rom-matibag-CnR-cx0BNyg-unsplash.png" alt="Image of a person holding a sign saying Biden Harris"/>
+        <p class="text">  
+        <h3>She Did It</h3>
         <b>Kamala Harris</b>, becomes the first woman, the first Asian American, and the first Black American to be elected vice president.
-          <i>I can’t help but daydream about Harris someday stepping one level up to the presidency</i> says 
-          Jemele Hill a contributing writer at <a href="https://www.theatlantic.com/world/">The Atlantic</a>.
+        <i>I can’t help but daydream about Harris someday stepping one level up to the presidency</i> says 
+        Jemele Hill a contributing writer at <a href="https://www.theatlantic.com/world/">The Atlantic</a>.
         </p>
       </div>
 
       <div class="news-card">
         <img class="photo-bar" src="../img/wrongtog-S92jBfyENpI-unsplash.png" alt="Image of a line in neon color"/>
-      <p class="text">
+        <p class="text">
         <h2>Saudi Arabia launches 170km city built in a straight line</h2>
-New eco-friendly project launched by the crown prince panned on social media as 'nonsense' and 'dreamed up from a sci-fi movie'
-      </p>
-    </div>
-    
+        New eco-friendly project launched by the crown prince panned on social media as 'nonsense' and 'dreamed up from a sci-fi movie'
+        </p>
+      </div>
 
     <div class="news-card">
       <img class="photo-bar" src="../img/helpstay-com-WCmeYmM3jW4-unsplash.png" alt="Image of a building"/>
       <p class="text">
-        <h2>The escape from Stockholm is increasing</h2>
-        More people move from Stockholm than to the region. Net emigration is increasing for the third year in a row, according to statistics from Statistics Sweden.
+      <h2>The escape from Stockholm is increasing</h2>
+      More people move from Stockholm than to the region. Net emigration is increasing for the third year in a row, according to statistics from Statistics Sweden.
       </p>
     </div>
 
@@ -80,58 +77,52 @@ New eco-friendly project launched by the crown prince panned on social media as 
       <div class="news-card">
         <img class="photo-bar" src="../img/antidepressiv.png" alt="Image of antidepressiv"/>
         <p class="text">
-          <h3>Antidepressants - the temporary cure that became permanent</h3>
-          Ineffective, says the child psychiatrist. A blessing, says the pharmacologist. Even among experts, the rift is deep in the view of antidepressant drugs.
+        <h3>Antidepressants - the temporary cure that became permanent</h3>
+        Ineffective, says the child psychiatrist. A blessing, says the pharmacologist. Even among experts, the rift is deep in the view of antidepressant drugs.
         </p>
-        </div>
+      </div>
   
-        <div class="news-card">
+      <div class="news-card">
         <img class="photo-bar" src="../img/josue-michel-i9cTdRQIuUg-unsplash.png" alt="Image of person"/>
-          <p class="text">
-            <h3>What it is like to carry on a tradition with a friend that can't remember it</h3>
-            Part of a series on Friendship, today we continue by telling stories of human life through conversations with our frinds.
-          </p>
+        <p class="text">
+        <h3>What it is like to carry on a tradition with a friend that can't remember it</h3>
+        Part of a series on Friendship, today we continue by telling stories of human life through conversations with our frinds.
+        </p>
       </div>
 
 
       <div class="news-card">
         <img class="photo-bar" src="../img/new2_ella-deane-YTRtCfniV8I-unsplash.png" alt="Image of a hand holding a book">
         <p class="text">
-          <h2>Rugged, Physical Work and reflection</h2>
-          In Amos Velsinger's work the participating artists share a common desire for reading as dancing. The new piece premiered at the underground theatre The Place to be last friday.  
+        <h2>Rugged, Physical Work and reflection</h2>
+        In Amos Velsinger's work the participating artists share a common desire for reading as dancing. The new piece premiered at the underground theatre The Place to be last friday.  
         </p> 
       </div>
 
       <div class="news-card">
         <img class="photo-bar" src="../img/edmund-lou-LeC-Q8oVoTs-unsplash.png" alt="Image of the film Dear Comrades by">
         <p class="text">
-          <h2><i>Dear comrades</i> - New documentary by Andrei Kontjalovskij </h2>
-          Russian drama about the workers in Novocherkassk who in 1962 openly protested against wage cuts and price increases on basic foodstuffs.
+        <h2><i>Dear comrades</i> - New documentary by Andrei Kontjalovskij </h2>
+        Russian drama about the workers in Novocherkassk who in 1962 openly protested against wage cuts and price increases on basic foodstuffs.
         </p>
-      </div>
       </div>
     </section>
 
     <footer class="footer container">
       <div class="footer-child-left">
         <nav class="desktop-menu-bottom">
-        <div class="nav-item">About</div>
-        <div class="nav-item">Contact</div>
-        <div class="nav-item">Subscribe</div>
+          <div class="nav-item">About</div>
+          <div class="nav-item">Contact</div>
+          <div class="nav-item">Subscribe</div>
         </nav>  
+      <div class="mobile-menu"> ≡ </div>
       </div>
 
-  <div class="footer-child-right">
-    <p class="text"> Published by: <a href="https://github.com/Frivridna/project-news-site">Frivridnadagar</a> 
-      <br>© NeoNews 2021
-    </p>   
-
-    <div class="mobile-menu"> 
-      ≡ 
-    </div>
-
-    </div>
-
-</footer>
+      <div class="footer-child-right">
+        <p class="text"> Published by: <a href="https://github.com/Frivridna/project-news-site">Frivridnadagar</a><br>
+        © NeoNews 2021
+        </p>   
+      </div>
+    </footer>
   </body>
 </html>
