update readme, change a lot of the text content

--- a/code/index.html
+++ b/code/index.html
@@ -32,7 +32,7 @@
         <div class="weather">
           <div class="lottie">
             <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-            <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_wIcwHL.json"  background="transparent"  speed="0.4"  style="width: 50px; height: 40px;"  loop  autoplay></lottie-player>
+            <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_wIcwHL.json"  background="transparent"  speed="0.6"  style="width: 50px; height: 40px;"  loop  autoplay></lottie-player>
           </div>
           <div class="weather-text">
             Snowy, –10°C
@@ -63,22 +63,22 @@
           <div class="item">
             <img src="./resources/mathias-konrath-BBjW2qnIixc-unsplash.jpg" alt="">
             <div class="text">
-              <h4>Listen to 'The Daily'</h4> 
-              <p>“Restoring the first brick of dignity”: Biden supporters on his inauguration.</p> 
+              <h4>A tabby is any domestic cat</h4> 
+              <p>with a distinctive 'M' shaped marking on its forehead</p> 
             </div>
           </div>
           <div class="item">
             <img src="./resources/cristian-newman-l9I93gZKTG4-unsplash.jpg" alt="">
             <div class="text">
-              <h4>Listen to 'The Daily'</h4> 
-              <p>“Restoring the first brick of dignity”: Biden supporters on his inauguration.</p> 
+              <h4>The English term tabby </h4> 
+              <p>originates from the translation commonly used in the 17th and 18th centuries</p> 
             </div>
           </div>  
           <div class="item">
             <img src="./resources/cristian-newman-A6O7pgc7vHg-unsplash.jpg" alt="">
             <div class="text">
-              <h4>Listen to 'The Daily'</h4> 
-              <p>“Restoring the first brick of dignity”: Biden supporters on his inauguration.</p> 
+              <h4>The four known distinct patterns</h4> 
+              <p>each having a sound genetic explanation, are the mackerel, classic, ticked and spotted tabby patterns.</p> 
             </div>
           </div>
         </div>
@@ -90,7 +90,7 @@
       <section class="top-news">
         <div class="mega-header">
           <h1>
-            Stop looking for unicorns. We’ve got the next big thing.
+            The Ragdoll is a cat breed with a color point coat and blue eyes.
           </h1>
         </div>
         <div class="container">
@@ -106,9 +106,15 @@
             <img src="./resources/dorothea-oldani-Hhm_fL04bE8-unsplash.jpg" alt="image of a kitten">
           </div>
           <div class="text">
-            <h1>Stop looking for unicorns. We’ve got the next big thing.</h1>
-            <p>Every tech company is struggling with the same issue – there are not enough developers to meet their growth. Most companies are looking for the same type of person, with the same background and the same boxes to tick.</p>
-            <p>We have around 60 junior frontend developers that have gone through our proven training program. At first glance, they might not fit your standard profile. However, we know that you will not only be wowed by their tech skills, they will deliver and bring new perspectives to your team. Previous students are currently working as frontend developers at companies like Dagens Nyheter, H&M, SeenThis, Comprend, Will&Skill, Mojang, TUI, Instabox and more.</p>
+            <h1>
+              The Ragdoll is a cat breed with a color point coat and blue eyes.
+            </h1>
+            <p>
+              They are large and muscular semi-longhair cats with a soft and silky coat. Developed by American breeder Ann Baker in the 1960s, they are best known for their docile and placid temperament and affectionate nature. The name "Ragdoll" is derived from the tendency of individuals from the original breeding stock to go limp and relaxed when picked up.
+            </p>
+            <p>
+              Particularly popular in both the United Kingdom and the breed's native United States, ragdoll cats are often known as "dog-like cats" or "puppy-like cats" due to such behaviors as their tendency to follow people around, their ease when physically handled, and their relative lack of aggression toward other pets.
+            </p>
           </div>
       </div>
       </section>
@@ -171,14 +177,6 @@
             <img src="./resources/clover_truff1.jpg" alt="image of Dipper the guinea pig. Photo by the great Kathleen Rogers">
           </div>
         </div>
-        <!-- <div class="text">
-          <h1>
-            Prospect of Pardons in Final Days Fuels Market to Buy Access to Trump
-          </h1>
-          <p>
-            Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.
-          </p>
-        </div> -->
       </section>
       <div class="divider"></div>
       <section class="grid-outer">    
@@ -290,9 +288,15 @@
       </section>
       <div class="divider"></div>
     </main>
-    <!-- <div class="divider"></div> -->
-    <footer>Hi you've reached the footer</footer>
-    <!-- <script src="./script.js"></script> -->
+    <footer>
+      <div>
+        <p>
+          This page is a project from Technigo Frontend Boot Camp spring 2021 by Lars Söderman -> lars.soderman@gmail.com
+        </p>
+      </div>
+      <div>
+        <img src="./resources/techjnigo-logo.svg" alt="Technigo logo">
+      </div>
+    </footer>
   </body>
-
 </html>
