--- a/code/index.html
+++ b/code/index.html
@@ -35,7 +35,7 @@
 <main class="papercontainer">
     <section class="anything">
         <article class="card topstroy">
-            <img src="https://cdn.pixabay.com/photo/2016/06/15/16/00/woman-1459220_1280.png" alt="technicooo">
+            <img src="https://cdn.pixabay.com/photo/2016/06/15/16/00/woman-1459220_1280.png" alt="Kvinna vid dator">
             <div class="topstory--rightcol">
                 <h1>Learn to code in 24 weeks</h1>
                 <p id="topstory">☝🏼 Enter a Bootcamp they said.<br>🤙🏼 You don't have to have any pre-knowledge they said.<br><br> Well that is if you haven't tested to code online or maybe worked as a google analytic or maybe you just have a developer friend hanging
@@ -55,7 +55,7 @@
 
         <a href="#">
             <articel class="card small">
-                <img src="https://cdn.pixabay.com/photo/2017/01/18/10/01/cloud-computing-1989339_1280.png">
+                <img src="https://cdn.pixabay.com/photo/2017/01/18/10/01/cloud-computing-1989339_1280.png" alt="Kugg hjul">
                 <h2>I relly dont know what to do here!</h2>
             </articel>
         </a>
@@ -63,28 +63,28 @@
 
         <a href="#">
             <articel class="card small">
-                <img src="https://cdn.pixabay.com/photo/2014/07/15/23/36/github-394322_1280.png">
+                <img src="https://cdn.pixabay.com/photo/2014/07/15/23/36/github-394322_1280.png" alt="Git Hub">
                 <h2>Or here!</h2>
             </articel>
         </a>
 
         <a href="#">
             <articel class="card small">
-                <img src="https://cdn.pixabay.com/photo/2017/07/08/19/32/symbol-2485367_1280.png">
+                <img src="https://cdn.pixabay.com/photo/2017/07/08/19/32/symbol-2485367_1280.png" alt="closing tag">
                 <h2>Shit, another card to fix</h2>
             </articel>
         </a>
 
         <a href="#">
             <articel class="card small">
-                <img src="https://cdn.pixabay.com/photo/2018/09/24/08/31/pixel-cells-3699334_1280.png">
+                <img src="https://cdn.pixabay.com/photo/2018/09/24/08/31/pixel-cells-3699334_1280.png" alt="not a bug">
                 <h2>Really!!!!</h2>
             </articel>
         </a>
 
         <a href="#">
             <articel class="card small">
-                <img src="https://cdn.pixabay.com/photo/2017/09/15/22/22/sos-2753818_1280.png">
+                <img src="https://cdn.pixabay.com/photo/2017/09/15/22/22/sos-2753818_1280.png" alt="SOS pic">
                 <h2>OMG! I give Up!</h2>
             </articel>
         </a>
