--- a/code/index.html
+++ b/code/index.html
@@ -34,8 +34,8 @@
           </a>
         </div>
         <div class="bn-text">
-          <h1>Freshest Release</h1>
-          <p>Right out of the box</p>
+          <h1>HOTTEST RELEASE NEWS</h1>
+          <p>Right out of the box. Three versions of the Nike Dunk has released. Arriving with three colorways to bring a new perspective of the Dunks iconic color-blocing.</p>
         </div>
       </div>
     </section>
@@ -43,35 +43,45 @@
     <section class="small-news">
       <div class="sn-card">
         <div class="sn-img-container">
-          <a href=""><img src="\assets\PLATINUM___MEDIAL_native_1600.jpg" alt="IMAGE"></a>
+          <a href="https://news.nike.com/content/nike-x-cpfm-swarovski-dunk-low"><img src="\assets\PLATINUM___MEDIAL_native_1600.jpg" alt="IMAGE"></a>
         </div>
-        <h3>Rip & Tear</h3>
-        <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. Venison burgdoggen fatback </p>
+        <h3>Crystals Forever</h3>
+        <p><i>2020, November 11</i> - With a theme of air and sunshine Cactus Plant Flea Market has done a brilliant collaboration again. The Nike Dunk is shining bright with actual Swarovski® crystals.</p>
       </div>
 
       <div class="sn-card">
         <div class="sn-img-container">
-          <a href=""><img src="\assets\Nike_Sportswear_FA20_Air_Force_1_Flyleather_QS_10_native_1600.jpg" alt="IMAGE"></a>
+          <a href="https://news.nike.com/content/ruohan-wang-flyleather-pack"><img src="\assets\Nike_Sportswear_FA20_Air_Force_1_Flyleather_QS_10_native_1600.jpg" alt="IMAGE"></a>
         </div>
-        <h3>Rip & Tear</h3>
-        <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas.</p>
+        <h3>Motha' Earth</h3>
+        <p><i>2020, September 18</i> - Ruohan Wang (Berlin-Based illustrator) gives the Flyleather pack some optimistic colour and motion. Made with 50% recycled leather fibre. </p>
       </div>
 
       <div class="sn-card">
         <div class="sn-img-container">
-          <a href=""><img src="\assets\Nike_Sportswear_SU20_W_Air_Force_1_LX_10_native_1600.jpg" alt="IMAGE"></a>
+          <a href="https://news.nike.com/content/nike-sportswear-pack-air-force-1-air-max-98-lx-official-images"><img src="\assets\Nike_Sportswear_SU20_W_Air_Force_1_LX_10_native_1600.jpg" alt="IMAGE"></a>
         </div>
-        <h3>Rip & Tear</h3>
-        <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas.</p>
+        <h3>Rip & Tear it to You</h3>
+        <p><i>2020, April 16</i> - Nike Air Force 1 LX releases a unique design for you to be creative in your own way. It is what is underneath that is the intriguing part. You can peel back the upper layer to make your own colourway.</p>
       </div>
 
       <div class="sn-card">
         <div class="sn-img-container">
-          <a href=""><img src="\assets\008_native_1600.jpg" alt="IMAGE"></a>
+          <a href="https://news.nike.com/content/nike-x-naomi-osaka-x-cdg"><img src="\assets\006_native_1600.jpg" alt="IMAGE"></a>
+        </div>
+        <h3>Naomi Osaka</h3>
+        <p><i>2020, December 4 -</i>The Nike x Naomi Osaka x CDG Blazer celebrates the irrefutable power of the tennis star’s cultural footprint. Additional details include Osaka's signature along with the handwritten phrase "Home is Where the Heart is.”</p>
+      </div>
+
+      <div class="sn-card">
+        <div class="sn-img-container">
+          <a href="https://news.nike.com/content/nike-x-naomi-osaka-x-cdg"><img src="\assets\006_native_1600.jpg" alt="IMAGE"></a>
         </div>
         <h3>Rip & Tear</h3>
         <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. </p>
-      </div>    
+      </div>
+
+      
 
     </section>
 
