added final touches, colors etc

--- a/code/index.html
+++ b/code/index.html
@@ -75,10 +75,10 @@
 
       <div class="sn-card">
         <div class="sn-img-container">
-          <a href="https://news.nike.com/content/nike-x-naomi-osaka-x-cdg"><img src="\assets\006_native_1600.jpg" alt="IMAGE"></a>
+          <a href="https://news.nike.com/content/nike-x-g-dragon-af1-para-noise-2"><img src="\assets\DD3223-100_210736523_D_E_1X1_native_1600.png" alt="IMAGE"></a>
         </div>
-        <h3>Rip & Tear</h3>
-        <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. </p>
+        <h3>‘Para-noise’</h3>
+        <p><i>2020, November 5 -</i> One year ago, Seoul-born hip-hop star G-DRAGON released his first collaborative Nike Air Force 1 “Para-noise". In 2020, the Nike Air Force 1 “Para-noise” reverses its color scheme to white, but retains its self-expressive character.</p>
       </div>
 
       
