Final touches - general code

--- a/code/index.html
+++ b/code/index.html
@@ -24,25 +24,27 @@
       </nav>
       
       <button class="ham">
-        <div class="hamburger"> 
-          <div></div>
-          <div></div>
-          <div></div>
-        </div>
+        <span class="hamburger"> 
+          <span></span>
+          <span></span>
+          <span></span>
+        </span>
       </button>
       <div class="social-media">      <!-- maybe put a class in each of these to regulate the space between them? -->
         <a href="#" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" 
           stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook">
             <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
-          </svg></a> 
+          </svg>
+        </a> 
         <a href="#" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" 
           stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram">
             <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
             <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
             <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
-          </svg></a>
+          </svg>
+        </a>
         <a href="#" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" 
           stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube">
@@ -50,7 +52,8 @@
             11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 
             29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path>
             <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
-          </svg></a>
+          </svg>
+        </a>
       </div>
     </header>
 
@@ -172,6 +175,5 @@
   </script>
 
   </body>
-
 </html>
 
