add hover on nav-items

--- a/code/index.html
+++ b/code/index.html
@@ -8,24 +8,27 @@
   </head>
   
   <body>
-    <header class="coreNavigation container">    
-      <nav class="desktop-menu-top">
-        <div class="nav-item">Latest</div>
-        <div class="nav-item">Today</div>
-        <div class="nav-item">This week</div>
-        <div class="nav-item">Month</div>
-      </nav>  
-        <div class="title-Neo"> 
+    <!--HEADER-->
+    <header class="coreNavigation container">
+        <nav class="menu-top">
+          <div class="nav-item">Latest</div>
+          <div class="nav-item">Today</div>
+          <div class="nav-item">This week</div>
+          <div class="nav-item">Month</div>
+        </nav>  
+      </div>
+      <div class="title-Neo"> 
         <h1>NeoNews</h1>      
-        </div>
-        <div class="button">
-          <button class="button1">Log in</button>
-          <button class="button2">Subscribe now</button>
-        </div>
+      </div>
+      <div class="button">
+        <button class="button1">Log in</button>
+        <button class="button2">Subscribe now</button>
+      </div>
     </header>
 
+    <!--BIG NEWS-->
     <section class="big-news container">
-      <img class="photo-bar" src="../img/new2_marjanblan-sAaHII-L-a8-unsplash.png" alt="Image of Corona virus as a paperball">
+      <img class="photo-bar" src="../img/new2_marjanblan-sAaHII-L-a8-unsplash.png" alt="Image of a Corona virus as a paperball">
       <div class="news-card">       
         <p class="text"> 
         <h3>Coronavirus vaccine: What are human challenge trials?</h3>
@@ -37,19 +40,20 @@
       </div>
     </section>
 
+    <!--MORE NEWS-->
     <section class="more-news container">
       <div class="news-card">
-        <img class="photo-bar" src="../img/rom-matibag-CnR-cx0BNyg-unsplash.png" alt="Image of a person holding a sign saying Biden Harris"/>
+        <img class="photo-bar" src="../img/rom-matibag-CnR-cx0BNyg-unsplash.png" alt="Image of a person holding a sign saying Biden Harris">
         <p class="text">  
         <h3>She Did It</h3>
         <b>Kamala Harris</b>, becomes the first woman, the first Asian American, and the first Black American to be elected vice president.
         <i>I can’t help but daydream about Harris someday stepping one level up to the presidency</i> says 
-        Jemele Hill a contributing writer at <a href="https://www.theatlantic.com/world/">The Atlantic</a>.
+        Camilla Brown a contributing writer at <a href="https://www.theatlantic.com/world/">The Atlantic</a>.
         </p>
       </div>
 
       <div class="news-card">
-        <img class="photo-bar" src="../img/wrongtog-S92jBfyENpI-unsplash.png" alt="Image of a line in neon color"/>
+        <img class="photo-bar" src="../img/wrongtog-S92jBfyENpI-unsplash.png" alt="Image of a line in neon color">
         <p class="text">
         <h2>Saudi Arabia launches 170km city built in a straight line</h2>
         New eco-friendly project launched by the crown prince panned on social media as 'nonsense' and 'dreamed up from a sci-fi movie'
@@ -57,15 +61,15 @@
       </div>
 
     <div class="news-card">
-      <img class="photo-bar" src="../img/helpstay-com-WCmeYmM3jW4-unsplash.png" alt="Image of a building"/>
+      <img class="photo-bar" src="../img/helpstay-com-WCmeYmM3jW4-unsplash.png" alt="Image of a building">
       <p class="text">
       <h2>The escape from Stockholm is increasing</h2>
-      More people move from Stockholm than to the region. Net emigration is increasing for the third year in a row, according to statistics from Statistics Sweden.
+      More people move from Stockholm than to the region. Net emigration is increasing for the third year in a row, according to statistics from <a href="https://scb.se/en/">Statistics Sweden</a>.
       </p>
     </div>
 
       <div class="news-card">
-        <img class="photo-bar" src="../img/jerry-wang-wjwmug0yvHM-unsplash.png" alt="Image of a kid"/>
+        <img class="photo-bar" src="../img/jerry-wang-wjwmug0yvHM-unsplash.png" alt="Image of a kid">
         <p class="text">
         <h2>"Evidence speaks against anxious middle-class parent"</h2>
         Children are irrational, researchers have long believed. Recent studies show that they use both statistics and probability to draw conclusions - and they are more creative problem solvers than adults, according to Stanford professor Alison Gopnik.
@@ -73,9 +77,10 @@
       </div>
     </section>
 
+    <!--OTHER NEWS-->
     <section class="other-news container">
       <div class="news-card">
-        <img class="photo-bar" src="../img/antidepressiv.png" alt="Image of antidepressiv"/>
+        <img class="photo-bar" src="../img/antidepressiv.png" alt="Image of antidepressiv">
         <p class="text">
         <h3>Antidepressants - the temporary cure that became permanent</h3>
         Ineffective, says the child psychiatrist. A blessing, says the pharmacologist. Even among experts, the rift is deep in the view of antidepressant drugs.
@@ -83,7 +88,7 @@
       </div>
   
       <div class="news-card">
-        <img class="photo-bar" src="../img/josue-michel-i9cTdRQIuUg-unsplash.png" alt="Image of person"/>
+        <img class="photo-bar" src="../img/josue-michel-i9cTdRQIuUg-unsplash.png" alt="Image of person">
         <p class="text">
         <h3>What it is like to carry on a tradition with a friend that can't remember it</h3>
         Part of a series on Friendship, today we continue by telling stories of human life through conversations with our frinds.
@@ -100,25 +105,25 @@
       </div>
 
       <div class="news-card">
-        <img class="photo-bar" src="../img/edmund-lou-LeC-Q8oVoTs-unsplash.png" alt="Image of the film Dear Comrades by">
+        <img class="photo-bar" src="../img/edmund-lou-LeC-Q8oVoTs-unsplash.png" alt="Image in black and white of a city">
         <p class="text">
         <h2><i>Dear comrades</i> - New documentary by Andrei Kontjalovskij </h2>
         Russian drama about the workers in Novocherkassk who in 1962 openly protested against wage cuts and price increases on basic foodstuffs.
         </p>
       </div>
     </section>
-
+    
+    <!--FOOTER-->
     <footer class="footer container">
-      <div class="footer-child-left">
-        <nav class="desktop-menu-bottom">
+      <div class="footer-left">
+        <nav class="menu-bottom">
           <div class="nav-item">About</div>
           <div class="nav-item">Contact</div>
           <div class="nav-item">Subscribe</div>
         </nav>  
-      <div class="mobile-menu"> ≡ </div>
       </div>
 
-      <div class="footer-child-right">
+      <div class="footer-right">
         <p class="text"> Published by: <a href="https://github.com/Frivridna/project-news-site">Frivridnadagar</a><br>
         © NeoNews 2021
         </p>   
