changed my hamburgermenu pic

--- a/code/index.html
+++ b/code/index.html
@@ -27,8 +27,8 @@
 
      
       <div class="dropdown">
-        <button class="dropbtn"><img src="https://assets.stickpng.com/images/588a6507d06f6719692a2d15.png" alt=""></button>
-        <div class="dropdown-content">
+        <button class="dropbtn"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/1200px-Hamburger_icon.svg.png" alt=""></button> <!-- https://assets.stickpng.com/images/588a6507d06f6719692a2d15.png-->
+        <div class="dropdown-content">  
           <a class="home2" href="index.html">Home</a>
           <a class="politics" href="https://www.svt.se/nyheter/amne/Politik%20i%20fokus" target="_blank">Politics</a></li>
           <a class="sport" href="https://www.svt.se/sport/" target="_blank">Sport</a>
