tried to change name of the path

--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
         <!--Add header child for logo and title set to 50%-->
-        <img class="logo" src="/code/assets/logonew.png" alt="Header Logo">
+        <img class="logo" src="../code/assets/logonew.png" alt="Header Logo">
         <h1 class="header-title">SNEAKERS & NEWS</h1>
         <!---add header child for -->
         <div class="mobile-hamburger">
