--- a/code/index.html
+++ b/code/index.html
@@ -57,22 +57,21 @@
       </nav>
     </header>
 
-    <section class="big-news">
-      <div class="news-card">
-        <article class="big-article">
-          <h2 class="news-title">This is Big News!</h2>
+    <section class="big-news-container">
+      <section class="container">
+        <article>
+          <h2 class="news-title">Guinea Pig befriends Giant Spider!</h2>
           <p class="news-text">Wheeeeek! Wheek squeak wheek wheek! Squeak squeak wheek
            whek wheeeeeek! wheeek wheek Wheeek!</p>
-        </article>
-    </div>
-      <figure class="big-image">
+        </article>        
         <img src="/assets/Spiderpig.jpg" alt="Giant spider and Guinea pig">
-      </figure>
+      </section>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="other-news-container">
+      
     </section>
+
   </body>
 
   <footer>
